# BlockBreaker3D

./: .gitignore  CMakeLists.txt  README.md
BlockBreaker3D/: CMakeLists.txt
BlockBreaker3D/assets/scenes/: gameplay.json  mainmenu.json  optionsmenu.json
BlockBreaker3D/src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Fonts.cpp  Fonts.h  GraphicsPipeline.cpp  Mesh.cpp  Scenes.cpp  Shader.cpp  Texture.cpp  UI.cpp  main.cpp
Shaders/: CMakeLists.txt  model-no-phong.frag  model-no-phong.vert  model-phong.frag  model.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  ui.frag  ui.vert
